changed jira url login services and project source files formatting

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,5 @@ security.oauth2.client.scope=profile email
 security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v2/userinfo
 spring.resources.chain.enabled=true
 
+csv.aliaspath=/projectroot/resources/downloads
+
