--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,13 @@
 			<version>1.7.21</version>
 		</dependency>-->
 
+		<!-- gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+
 
         <!-- not sure-->
 		<dependency>
